# digisim

./: .gitignore  Cargo.toml
src/: connector.rs  lib.rs
src/circuit/: connection.rs  connector.rs  mod.rs  params.rs  registry.rs  state.rs
src/circuit/definition/: mod.rs
src/circuit/template/: circuit.rs  component.rs  connection.rs  connector.rs  kind.rs  mod.rs  pins.rs
src/component/: audio_listener.rs  clock.rs  compiled.rs  display.rs  functional.rs  generic.rs  ground.rs  led.rs  memory.rs  mod.rs  nand.rs  registry.rs  source.rs  switch.rs  transparent.rs  tristate.rs  wiring.rs
src/component/definition/: circuit.rs  component.rs  kind.rs  mod.rs  pin_mapping.rs  pins.rs  truth_table.rs
src/sim/: config.rs  event.rs  mod.rs  settings.rs  user_event.rs  wheel.rs
src/util/: bitext.rs  bits.rs  mod.rs
src/validation/: mod.rs  report.rs  requirements.rs
src/wasm/: mod.rs  utils.rs
tests/assets/: ab_inverted_definition.json  ab_inverted_on_not_circuit.json  and_gate_definition.json  nand_gate_circuit.json  not_gate_definition.json
