[package]
name = "circa2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
rassert-rs = "1.0"
thiserror = "1.0"
rustlogic = "0.2"
derivative = "2.2"